# wardwell

./: .gitignore  Cargo.toml  INSTALL-SPEC.md  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-04-24-kanban-mcp-tool.md
docs/superpowers/specs/: 2026-04-24-kanban-mcp-tool-design.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: path_enforcement.rs
src/: lib.rs  main.rs
src/alias/: mod.rs  resolver.rs
src/config/: loader.rs  mod.rs  types.rs
src/daemon/: indexer.rs  mod.rs  summarizer.rs  watcher.rs
src/domain/: boundary.rs  mod.rs  model.rs  path.rs  registry.rs
src/index/: builder.rs  chunk.rs  embed.rs  fts.rs  hybrid.rs  mod.rs  store.rs
src/inject/: claude_md.rs  mod.rs
src/install/: detect.rs  doctor.rs  init.rs  mcp_config.rs  mod.rs  uninstall.rs
src/kanban/: audit.rs  events.rs  mod.rs  prefix.rs  store.rs
src/mcp/: server.rs
src/vault/: frontmatter.rs  mod.rs  reader.rs  types.rs
tests/: kanban_stress.rs
